# logiak-cloud-function-api

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  download_mock_data.py  local_server.py  main.py  pyproject.toml  requirements.txt
cloud/: auth.py  data.py  endpoints.py  fb_utils.py  meta.py  query.py  schema.py  utils.py
mock/: endpoints.py
mock/lomis/data/: data.json  slots.json  tx.json
mock/lomis/meta/: app-info.json  app.json  inits.json  schemas.json
script/: test.sh
test/: __init__.py  entrypoint.sh  setup.cfg  setup.py  test_fb.py  test_integration.py  test_mock.py  test_utils.py
test/conf/: requirements.txt
